project(FLAWS_TOOLS-FLAWS_SEQUENCE)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################
add_subdirectory(flaws-processing)

