project(FLAWS_TOOLS-SEQUENCE_SIMULATION)

################################################################################
# Here go the add_subdirectories, no code should be at the root of the project
################################################################################
add_subdirectory(mprage-simulation)
add_subdirectory(spin-echo-simulation)

